# microsoft-ai-ml-engineering

./: pyproject.toml
Module 2/: 3_walkthrough_fetch_document.ipynb  5_practice_activity_setup_local_data_cleaning_preprocessing_tool.ipynb  6_practice_activity_apply_preprocessing_tool_dummy_dataset_ml.ipynb  7_walkthrough_data_cleaning_preprocessing_optional.ipynb  9_practice_activity_auditing_ml_code_for_security_vulnerabilities.ipynb
building-intelligent-troubleshooting-agents/: 1_practice_activity_creating_code_repository.ipynb  2_llm_fine_tuning_principles_and_steps.ipynb  3_practice_activity_llm_fine_tuning.ipynb  4_walkthrough_llm_fine_tuning_optional.ipynb  data_preparation_fine_tuning.ipynb
foundations-of-ai-and-machine-learning/Module 2/: 10_walkthrough_auditing_ml_code_for_security_vulnerabilities_optional.ipynb  1_python_data_scraper_walkthrough.ipynb  2_practice_activity_fetch_document.ipynb  4_manage_missing_values_outliers_normalize_transform_data.ipynb  8_how_to_identify_errors_in_data_collection_optional.ipynb
