[project]
name = "foundations-of-ai-and-machine-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "lxml>=6.0.0",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "requests>=2.32.5",
]
